# SURGE-FlappyBird

./: .gitignore  CMakeLists.txt  README.md  config.ini  config.yaml
FlappyBird/: CMakeLists.txt
FlappyBird/include/: flappy_bird.hpp  state_machine.hpp  type_aliases.hpp
FlappyBird/resources/sheets/: bird_red.xcf
FlappyBird/resources/sheets/xcf/: bird_blue.xcf  bird_red.xcf  bird_yellow.xcf
FlappyBird/src/: flappy_bird.cpp  flappy_bird_back.cpp  state_machine.cpp  state_update.cpp
